--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,10 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
-    "branch": "master"
+    "username": "Arttii",
+    "repositoryName": "arttii.github.io",
+    "branch": "gh-pages"
   },
   "theme": {
-    "name": "Casper"
+    "name": "Roon"
   }
 }
