--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -2,7 +2,7 @@
   "meta": {
     "username": "Arttii",
     "repositoryName": "arttii.github.io",
-    "branch": "gh-pages"
+    "branch": "master"
   },
   "theme": {
     "name": "Roon"
